<resources>
    <string name="app_name">WealthBook</string>
    <string name="default_notification_channel_id">Wealthbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="btn_ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dialog button action -->
    <string name="action_logout">Action Logout</string>
    <string name="action_accepted">Action Accepted</string>
    <string name="action_allocation_not_available">Action Accepted</string>
    <!-- Side menu text -->
    <string name="nav_my_allocations">My Allocations</string>
    <string name="nav_my_allocation">My Allocation</string>
    <string name="nav_my_portfolios">My Portfolios</string>
    <string name="nav_updates">Updates</string>
    <string name="nav_news">News</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>

    <!-- Login screen text -->
    <string name="placeholder_email">Enter your email address</string>
    <string name="placeholder_password">Enter password</string>
    <string name="txt_login">Login</string>
    <string name="error_user_email">Please enter valid email</string>
    <string name="error_password">Password should be greater than 6</string>
    <string name="error_otp">OTP should not be empty</string>
    <string name="btn_change_password">Reset Password?</string>
    <string name="txt_trouble_logging_in">Trouble Logging in?</string>

    <!-- Profile screen text -->
    <string name="txt_my_profile">My Profile</string>
    <string name="lbl_first_name">First Name:</string>
    <string name="lbl_last_name">Last Name:</string>
    <string name="lbl_mobile_no">Mobile:</string>
    <string name="lbl_email">E-mail:</string>
    <string name="lbl_country">Country:</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="txt_logout_message">Are you sure want to Logout WealthBook?</string>
    <string name="txt_logout_yes">Yes I am sure</string>
    <string name="txt_logout_cancel">Cancel</string>

    <!-- News screen text -->
    <string name="txt_source">Source: %1$s</string>
    <string name="txt_category">Category: %1$s</string>

    <!-- Adviser profile screen-->
    <string name="lbl_work">Work:</string>
    <string name="lbl_office">Office:</string>
    <string name="txt_contact_information">Contact Information</string>

    <!-- Forgot password screen text -->
    <string name="placeholder_otp">Enter valid OTP</string>
    <string name="placeholder_confirm_password">Re-enter password</string>
    <string name="txt_submit">Submit</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="error_confirm_password">Please enter valid password </string>
    <string name="error_empty_top">Please enter valid OTP code</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_forgot_link_sent">6 digit code has been sent to your registered email \n%1$s</string>
    <string name="txt_password_change_success">Your password change successfully</string>

    <!-- My allocation screen text -->
    <string name="txt_fund_name">Fund Name</string>
    <string name="txt_percentage">% Percentage</string>
    <string name="txt_portfolio">Select Portfolio</string>
    <string name="txt_acc_holder">Account Holder</string>
    <string name="txt_acc_title">Account Title</string>
    <string name="txt_acc_no">Account No</string>
    <string name="txt_adv_name">Advisor Name</string>
    <string name="txt_adv_contact">Advisor Contact</string>
    <string name="txt_portfolio_as_of">Portfolio as of</string>
    <string name="txt_assets_by_invest">Assets By Investment Type</string>
    <string name="txt_charts">Charts</string>

    <!-- My portfolio screen text -->
    <string name="txt_portfolio_name">Portfolio Name</string>
    <string name="txt_market_close">Market Close</string>
    <string name="txt_ytd_ret">YTD RET. %</string>
    <string name="txt_pr_yr_net">Pr. Yr.Net %</string>
    <string name="txt_lifetime_ret">Lifetime RET. %</string>
    <string name="txt_incept_date">Incept.Date</string>
    <string name="txt_portfolio_empty_message">Currently, your portfolio is empty</string>
    <string name="txt_eod_value">EOD value %1$s</string>
    <string name="txt_ytd_value">YTD %1$s</string>
    <string name="dolor">$</string>

    <!-- Details of portfolio screen -->
    <string name="txt_quantity">Quantity</string>
    <string name="txt_eod_price">EOD price</string>
    <string name="txt_eod_value_cost_basis">EOD value Cost Basis</string>
    <string name="txt_of_assets">% of Assets</string>
    <string name="txt_gain_or_loss">Gain or (Loss)</string>
    <string name="txt_default">--</string>
    <string name="txt_symbol">Symbol: </string>

    <!-- Pending alert dialog screen -->
    <string name="txt_empty_pending_alert">No Pending \nAlerts Found</string>
    <string name="action_empty_pending_alert">Action No Pending Alerts Found</string>
    <string name="txt_pending_alert_heading">Pending Alerts</string>
    <string name="txt_account_title">Account Title:\ </string>
    <string name="txt_account_no">Account no:\ </string>
    <string name="txt_adviser_name">Advisor Name:\ </string>
    <string name="txt_adviser_contact">Adviser Contact:\ </string>
    <string name="txt_alert">Alert:\ </string>

    <!-- Notification alert screen-->
    <string name="txt_pending_alert">%1$s %2$s</string>
    <string name="txt_portfolio_change">Portfolio Changes\ %1$s</string>
    <string name="txt_btn_accept">Accept</string>
    <string name="txt_btn_decline">Decline</string>
    <string name="channel_name">Channel</string>
    <string name="channel_description">Channel Description</string>
    <string name="success">Success</string>
    <string name="allocation_not_available">Portfolio Allocation Not Available, please contact your advisor for any questions!</string>
</resources>
