<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_allocation"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_my_allocations" />
        <item
            android:id="@+id/nav_my_portfoilios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_my_portfolios" />
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_updates" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_logout" />
    </group>
</menu>
