<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txv_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/txt_normal"
        android:textStyle="bold"
        tools:text="@string/txt_account_title" />

    <TextView
        android:id="@+id/txv_account_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_account_title"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/txt_normal"
        tools:text="@string/txt_account_no" />

    <TextView
        android:id="@+id/txv_adviser_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_account_no"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/txt_normal"
        tools:text="@string/txt_adviser_name" />

    <TextView
        android:id="@+id/txv_adviser_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_adviser_name"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/txt_normal"
        tools:text="@string/txt_adviser_contact" />

    <TextView
        android:id="@+id/txv_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_adviser_contact"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_normal"
        tools:text="@string/txt_alert" />
</RelativeLayout>