<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="@dimen/padding_small"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txv_otp_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="@dimen/margin_normal"
        android:gravity="center"
        android:textSize="@dimen/txt_large"
        android:visibility="gone"
        tools:text="@string/txt_forgot_link_sent" />

    <com.example.daffolapmac.wealthbook.widget.wbedittext.WBEditTextWithRounded
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_otp_sent"
        android:inputType="textEmailAddress"
        app:WBETRColor="@color/colorTextDefault"
        app:WBETRHintText="@string/placeholder_email"
        app:WBETRMaxChar="25" />

    <com.example.daffolapmac.wealthbook.widget.wbedittext.WBEditTextWithRounded
        android:id="@+id/edt_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email"
        android:layout_marginTop="@dimen/margin_large"
        android:inputType="textPassword"
        android:visibility="gone"
        app:WBETRColor="@color/colorTextDefault"
        app:WBETRHintText="@string/placeholder_password"
        app:WBETRMaxChar="25" />

    <com.example.daffolapmac.wealthbook.widget.wbedittext.WBEditTextWithRounded
        android:id="@+id/edt_user_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_user_password"
        android:layout_marginTop="@dimen/margin_large"
        android:inputType="textPassword"
        android:visibility="gone"
        app:WBETRColor="@color/colorTextDefault"
        app:WBETRHintText="@string/placeholder_confirm_password"
        app:WBETRMaxChar="25" />

    <com.example.daffolapmac.wealthbook.widget.wbedittext.WBEditTextWithRounded
        android:id="@+id/edt_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_user_confirm_password"
        android:layout_marginTop="@dimen/margin_large"
        android:inputType="textPassword"
        android:visibility="gone"
        app:WBETRColor="@color/colorTextDefault"
        app:WBETRHintText="@string/placeholder_otp"
        app:WBETRMaxChar="25" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_otp"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/txt_submit"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</RelativeLayout>