<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorMyProfileTitleBg"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/padding_smallest"
    android:paddingTop="@dimen/padding_smallest">

    <View
        android:id="@+id/txv_portfolio_name"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="@dimen/padding_x_smallest"
        android:paddingStart="@dimen/padding_x_smallest" />

    <TextView
        android:id="@+id/txv_market_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="@dimen/padding_x_smallest"
        android:paddingStart="@dimen/padding_x_smallest"
        android:text="@string/txt_quantity" />

    <TextView
        android:id="@+id/txv_ytd_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="@dimen/padding_x_smallest"
        android:paddingStart="@dimen/padding_x_smallest"
        android:text="@string/txt_eod_price" />

    <TextView
        android:id="@+id/txv_pr_yr_net"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="@dimen/padding_x_smallest"
        android:paddingStart="@dimen/padding_x_smallest"
        android:text="@string/txt_eod_value_cost_basis" />

    <TextView
        android:id="@+id/txv_lifetime_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="@dimen/padding_x_smallest"
        android:paddingStart="@dimen/padding_x_smallest"
        android:text="@string/txt_of_assets" />

    <TextView
        android:id="@+id/txv_incept_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="@dimen/padding_x_smallest"
        android:paddingStart="@dimen/padding_x_smallest"
        android:text="@string/txt_gain_or_loss" />
</LinearLayout>