<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_title"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@android:color/black"
                android:gravity="center"
                android:letterSpacing=".01"
                android:paddingBottom="@dimen/margin_small"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_normal" />

            <TextView
                android:id="@+id/nav_my_allocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_14dp"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_14dp"
                android:text="@string/nav_my_allocations"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold" />

            <View
                android:id="@+id/my_allocation_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@color/colorHint" />

            <TextView
                android:id="@+id/nav_my_portfoilios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_14dp"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_14dp"
                android:text="@string/nav_my_portfolios"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@color/colorHint" />

            <TextView
                android:id="@+id/nav_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_14dp"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_14dp"
                android:text="@string/nav_updates"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@color/colorHint" />

            <TextView
                android:id="@+id/nav_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_14dp"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_14dp"
                android:text="@string/nav_news"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@color/colorHint" />

            <TextView
                android:id="@+id/nav_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_14dp"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_14dp"
                android:text="@string/nav_profile"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@color/colorHint" />

            <TextView
                android:id="@+id/nav_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_14dp"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_14dp"
                android:text="@string/nav_logout"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@color/colorHint" />
        </LinearLayout>
    </android.support.design.widget.NavigationView>

    <!-- app:headerLayout="@layout/nav_header_main" -->

</android.support.v4.widget.DrawerLayout>
