<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daffolapmac.wealthbook.screen.notificationalert.view.NotificationAlertFragment">

    <TextView
        android:id="@+id/txv_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/alert"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_large" />

    <TextView
        android:id="@+id/txv_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_alert"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/txt_default"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_normal" />

    <TextView
        android:id="@+id/txv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_customer_name"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/txt_default"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_normal" />

    <TextView
        android:id="@+id/txv_update_status_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_product_name"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/txt_default"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_normal" />

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bnt_container"
        android:layout_below="@+id/txv_update_status_date" />

    <RelativeLayout
        android:id="@+id/bnt_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txv_accepted_succ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_normal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_large" />

        <LinearLayout
            android:id="@+id/btn_container_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txv_accepted_succ"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_accept_btn"
                android:minWidth="100dp"
                android:text="@string/txt_btn_accept"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-15dp"
                android:background="@drawable/rounded_decline_btn"
                android:minWidth="100dp"
                android:text="@string/txt_btn_decline"
                android:textAllCaps="false" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
